<?xml version="1.0"?>
<package>
  <name>ps4camera</name>
  <version>0.0.1</version>
  <description>PS4-Camera Package</description>

  <maintainer email="mail@justrobots.net">Sebastian Patrik Kleinschmidt</maintainer>
  <license>TODO</license>
  <url type="website">http://www.justrobots.net</url>
  <url type="repository">https://github.com/JustRobots/ros-indigo-ps4camera</url>
  <author email="mail@justrobots.net">Sebastian Patrik Kleinschmidt</author>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>std_msgs</build_depend>

  <export>

  </export>
</package>
